--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
         </nav>
     </header>
     <div class="container">
+        <p>Aqui inicia Vista</p>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
